--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </p>
             
             <!-- Consultation Request Form (Powered by Formspree) -->
-            <form action="[INSERT YOUR FORMSPREE ENDPOINT HERE]" method="POST" class="space-y-6 bg-white p-8 rounded-xl shadow-2xl text-gray-800">
+            <form action="https://formspree.io/f/xjkaokwn" method="POST" class="space-y-6 bg-white p-8 rounded-xl shadow-2xl text-gray-800">
                 
                 <!-- Name Field -->
                 <div>
